--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -49,8 +49,8 @@ body {
     background-color: #ddd;
     display: grid;
     margin: auto;
-    width:350px;
-    height:90px;
+    width:24rem;
+    height:5.75rem;
     line-height: 45px;
     
   }
@@ -138,10 +138,10 @@ body {
   }
   
   .game-board {
-    display: flex;
-    flex-direction: row;
-    margin-left: 650px;
-    margin-top: -55px;
+    position: absolute;
+    align-self:center;
+    top:20%;
+    left:35%;
     font: 50px "Brush Script MT", cursive;
     text-align: center;
     color:rgb(85, 61, 61);
@@ -156,10 +156,10 @@ body {
     font: 50px "Brush Script MT", cursive;
     color:rgb(85, 61, 61);
     background-color: #ddd;
-    margin-top:5px;
-    margin-left:5px;
-    width:225px;
-    height:90px;
+    margin-top:.5rem;
+    margin-left:.5rem;
+    width:14rem;
+    height:6rem;
     line-height: 45px;
   }
 
@@ -169,14 +169,20 @@ body {
     background-color: rgb(160, 160, 160);
   }
 
+  .game-main-headers {
+    display:grid;
+    grid-template-columns: 1fr 2fr 1fr;
+  }
+
   .game-header h2 {
     font: 100px "Brush Script MT", cursive;
     color:rgb(85, 61, 61);
     font-weight: bold;
-    line-height: 200px;
-    height: 200px;
-    margin-top: -130px;
     text-align: center;
+    margin:0 auto;
+    position: relative;
+    align-self:center;
+    top:1%;
   }
   
   .game-info {
@@ -234,16 +240,19 @@ body {
     text-align: center;
 }
 
+.name-label {
+  display:grid;
+  grid-template-columns: .35fr 1fr 1fr .35fr;
+  margin-bottom:1rem;
+}
+
 .name-label label {
   font-weight: bold;
   font: 35px "Brush Script MT", cursive;
-  margin-left: 540px;
-  margin-right:50px;
-  display: inline-flex;
+  text-align: center;
   justify-content:space-between;
   color:rgb(85, 61, 61);
 }
-
   .name-box {
     border-width:thick;
     border-color:rgb(78, 10, 10);
@@ -257,9 +266,8 @@ body {
     width: 250px;
     justify-content: space-evenly;
     text-align: center;
-    margin-left: 140px;
-    margin-right: 320px;
-    margin-top: 10px;
+    margin-left: 8.5rem;
+    margin-right: 18rem;
   }
 
   .optionChoiceNames {
@@ -267,8 +275,15 @@ body {
     display: inline-flex;
     justify-content:space-between;
     color:rgb(85, 61, 61);
-    margin-top: 50px;
-    margin-left: 40px;
+    margin-left:2.5rem;
+    margin-top:2 rem;
+  }
+
+  .who-first-label {
+    font: 30px "Brush Script MT", cursive;
+    color:rgb(85, 61, 61);
+    margin-left:6rem;
+    margin-top:-2rem;
   }
 
   .who-first-button {
@@ -280,13 +295,21 @@ body {
     font: 25px "Brush Script MT", cursive;
     color:rgb(85, 61, 61);
     background-color: #ddd;
-    display:inline-flex;
-    width: 250px;
-    justify-content: space-evenly;
+    display:-ms-inline-grid;
+    width: 15.5rem;
     text-align: center;
-    margin-left: 110px;
-    margin-right: 395px;
-    margin-top: 10px;
+    margin-top: 2rem;
+    margin-left: 13rem;
+    margin-right: 16rem;
+  }
+
+  .first-label {
+    font: 30px "Brush Script MT", cursive;
+    display: inline-flex;
+    justify-content:space-between;
+    color:rgb(85, 61, 61);
+    margin-left:5.7rem;
+    margin-top:-1rem;
   }
 
  .winning-text  {
@@ -318,10 +341,10 @@ body {
     font: 50px "Brush Script MT", cursive;
     color:rgb(85, 61, 61);
     background-color: #ddd;
-    margin-top:5px;
-    margin-left:5px;
-    width:225px;
-    height:90px;
+    margin-top:.5rem;
+    margin-left:.5rem;
+    width:14rem;
+    height:6rem;
     line-height: 45px;
   }
   
