--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -219,10 +219,10 @@ body {
     font: 50px "Brush Script MT", cursive;
     color:rgb(85, 61, 61);
     background-color: #ddd;
-    margin-top:5px;
-    margin-left:5px;
-    width:225px;
-    height:90px;
+    margin-top:.5rem;
+    margin-left:.5rem;
+    width:14rem;
+    height:6rem;
     line-height: 45px;
   }
 
