--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,365 +1,370 @@
 body {
-    background-color: #ddd;
-  }
+  background-color: #ddd;
+}
+
+ol, ul {
+  padding-left: 30px;
+}
+
+.board-row:after {
+  clear: both;
+  content: "";
+  display: table;
+}
+
+.status {
+  margin-top: -10%;
+  margin-bottom: 10%;
+  margin-left: -30%;
+  margin-right: -30%;
+}
+
+.start-game h1 {
+  font: 150px "Brush Script";
+  text-align: center;
+  line-height: 0%;
+  margin-top: 10%;
+  color:rgb(85, 61, 61);
+}
+
+.start-game h2 {
+  font: 1.875rem "Brush Script";
+  text-align: center;
+  margin-top: 15%;
+  color:rgb(85, 61, 61);
+}
+
+.start-game h6 {
+  font: 1.5rem "Brush Script";
+  text-align: center;
+  margin-top: -2%;
+  color:rgb(85, 61, 61);
+}
+
+.start-game button {
+  border-width:thick;
+  border-radius:45px;
+  border-color:rgb(78, 10, 10);
+  border-style:double;
+  padding: 14px;
+  font: 50px "Brush Script", bold;
+  color:rgb(85, 61, 61);
+  background-color: #ddd;
+  display: grid;
+  margin: auto;
+  width:24rem;
+  height:5.5rem;
+  line-height: 3.75rem;
   
-  ol, ul {
-    padding-left: 30px;
-  }
-  
-  .board-row:after {
-    clear: both;
-    content: "";
-    display: table;
-  }
-  
-  .status {
-    margin-bottom: 45px;
-  }
+}
 
-  .start-game h1 {
-    font: 150px "Brush Script MT", cursive;
-    text-align: center;
-    line-height: 0px;
-    margin-top: 200px;
-    color:rgb(85, 61, 61);
-  }
+.start-game button:hover { background-color: rgb(190, 190, 190); }
 
-  .start-game h2 {
-    font: 30px "Brush Script MT", cursive;
-    text-align: center;
-    margin-top: 230px;
-    color:rgb(85, 61, 61);
-  }
+.start-game button:active {
+  background-color: rgb(160, 160, 160);
+}
 
-  .start-game h6 {
-    font: 30px "Brush Script MT", cursive;
-    text-align: center;
-    line-height: -100p;
-    color:rgb(85, 61, 61);
-  }
+.square1 {
+  background: rgb(212, 199, 199);
+  border: 5px solid rgb(66, 60, 60);
+  float: left;
+  color: rgb(52, 72, 184);
+  font-size: 9rem;
+  font-weight: bold;
+  line-height: 34px;
+  height: 10rem;
+  margin-right: -4px;
+  margin-top: -4px;
+  padding: 0;
+  text-align: center;
+  width: 10rem;
+}
 
-  .start-game button {
-    border-width:thick;
-    border-radius:45px;
-    border-color:rgb(78, 10, 10);
-    border-style:double;
-    padding: 14px;
-    font: 50px "Brush Script MT", cursive;
-    color:rgb(85, 61, 61);
-    background-color: #ddd;
-    display: grid;
-    margin: auto;
-    width:24rem;
-    height:5.75rem;
-    line-height: 45px;
-    
-  }
+.square1:focus {
+  outline: none;
+}
 
-  .start-game button:hover { background-color: rgb(190, 190, 190); }
+.square2 {
+  background: rgb(212, 199, 199);
+  border: 5px solid rgb(66, 60, 60);
+  float: left;
+  color: rgb(204, 31, 31);
+  font-size: 9rem;
+  font-weight: bold;
+  line-height: 34px;
+  height: 10rem;
+  margin-right: -4px;
+  margin-top: -4px;
+  padding: 0;
+  text-align: center;
+  width: 10rem;
+}
 
-  .start-game button:active {
-    background-color: rgb(160, 160, 160);
-  }
-  
-  .square1 {
-    background: rgb(212, 199, 199);
-    border: 5px solid rgb(66, 60, 60);
-    float: left;
-    color: rgb(52, 72, 184);
-    font-size: 150px;
-    font-weight: bold;
-    line-height: 34px;
-    height: 200px;
-    margin-right: -4px;
-    margin-top: -4px;
-    padding: 0;
-    text-align: center;
-    width: 200px;
-  }
-  
-  .square1:focus {
-    outline: none;
-  }
+.square2:focus {
+  outline: none;
+}
 
-  .square2 {
-    background: rgb(212, 199, 199);
-    border: 5px solid rgb(66, 60, 60);
-    float: left;
-    color: rgb(204, 31, 31);
-    font-size: 150px;
-    font-weight: bold;
-    line-height: 34px;
-    height: 200px;
-    margin-right: -4px;
-    margin-top: -4px;
-    padding: 0;
-    text-align: center;
-    width: 200px;
-  }
-  
-  .square2:focus {
-    outline: none;
-  }
+.winningSquare1 {
+  background: rgb(48, 224, 127);
+  border: 5px solid rgb(66, 60, 60);
+  float: left;
+  color: rgb(52, 72, 184);
+  font-size: 12rem;
+  font-weight: bold;
+  line-height: 34px;
+  height: 10rem;
+  margin-right: -4px;
+  margin-top: -4px;
+  padding: 0;
+  text-align: center;
+  width: 10rem;
+}
 
-  .winningSquare1 {
-    background: rgb(48, 224, 127);
-    border: 5px solid rgb(66, 60, 60);
-    float: left;
-    color: rgb(52, 72, 184);
-    font-size: 220px;
-    font-weight: bold;
-    line-height: 34px;
-    height: 200px;
-    margin-right: -4px;
-    margin-top: -4px;
-    padding: 0;
-    text-align: center;
-    width: 200px;
-  }
+.winningSquare2 {
+  background: rgb(48, 224, 127);
+  border: 5px solid rgb(66, 60, 60);
+  float: left;
+  color: rgb(204, 31, 31);
+  font-size: 12rem;
+  font-weight: bold;
+  line-height: 34px;
+  height: 10rem;
+  margin-right: -4px;
+  margin-top: -4px;
+  padding: 0;
+  text-align: center;
+  width: 10rem;
+}
 
-  .winningSquare2 {
-    background: rgb(48, 224, 127);
-    border: 5px solid rgb(66, 60, 60);
-    float: left;
-    color: rgb(204, 31, 31);
-    font-size: 220px;
-    font-weight: bold;
-    line-height: 34px;
-    height: 200px;
-    margin-right: -4px;
-    margin-top: -4px;
-    padding: 0;
-    text-align: center;
-    width: 200px;
-  }
-  
-  .kbd-navigation .square:focus {
-    background: #ddd;
-  }
-  
-  .game-board {
-    position: absolute;
-    align-self:center;
-    top:20%;
-    left:35%;
-    font: 50px "Brush Script MT", cursive;
-    text-align: center;
-    color:rgb(85, 61, 61);
-  }
+.kbd-navigation .square:focus {
+  background: #ddd;
+}
 
-  .quit button {
-    border-width:thick;
-    border-radius:40px;
-    border-color:rgb(78, 10, 10);
-    border-style:double;
-    padding: 12px;
-    font: 50px "Brush Script MT", cursive;
-    color:rgb(85, 61, 61);
-    background-color: #ddd;
-    margin-top:.5rem;
-    margin-left:.5rem;
-    width:14rem;
-    height:5.25rem;
-    line-height: 1rem;
-  }
+.game-board {
+  position: absolute;
+  align-self:center;
+  top:25%;
+  left:30%;
+  font: 50px "Brush Script";
+  text-align: center;
+  color:rgb(85, 61, 61);
+}
 
-  .quit button:hover { background-color: rgb(190, 190, 190); }
+.quit button {
+  border-width:thick;
+  border-radius:40px;
+  border-color:rgb(78, 10, 10);
+  border-style:double;
+  padding: 12px;
+  font: 50px "Brush Script", bold;
+  color:rgb(85, 61, 61);
+  background-color: #ddd;
+  margin-top:.5rem;
+  margin-left:.5rem;
+  width:14rem;
+  height:5.25rem;
+  line-height: 3.75rem;
+}
 
-  .quit button:active {
-    background-color: rgb(160, 160, 160);
-  }
+.quit button:hover { background-color: rgb(190, 190, 190); }
 
-  .game-main-headers {
-    display:grid;
-    grid-template-columns: 1fr 2fr 1fr;
-  }
+.quit button:active {
+  background-color: rgb(160, 160, 160);
+}
 
-  .game-header h2 {
-    font: 100px "Brush Script MT", cursive;
-    color:rgb(85, 61, 61);
-    font-weight: bold;
-    text-align: center;
-    margin:0 auto;
-    position: relative;
-    align-self:center;
-    top:1%;
-  }
-  
-  .game-info {
-    margin-left: 20px;
-  }
+.game-main-headers {
+  display:grid;
+  grid-template-columns: 1fr 2fr 1fr;
+}
 
-  .options-page h2 {
-    font: 100px "Brush Script MT", cursive;
-    color:rgb(85, 61, 61);
-    font-weight: bold;
-    line-height: 200px;
-    height: 200px;
-    margin-top: -130px;
-    text-align: center;
-  }
+.game-header h2 {
+  font: 100px "Brush Script";
+  color:rgb(85, 61, 61);
+  font-weight: bold;
+  text-align: center;
+  margin:0 auto;
+  position: relative;
+  align-self:center;
+  top:1%;
+}
+
+.game-info {
+  margin-left: 20px;
+}
+
+.options-page h2 {
+  font: 100px "Brush Script";
+  color:rgb(85, 61, 61);
+  font-weight: bold;
+  line-height: 200px;
+  height: 200px;
+  margin-top: -130px;
+  text-align: center;
+}
 
 
-  .options-page button {
-    border-width:thick;
-    border-radius:40px;
-    border-color:rgb(78, 10, 10);
-    padding: 12px;
-  }
+.options-page button {
+  border-width:thick;
+  border-radius:40px;
+  border-color:rgb(78, 10, 10);
+  padding: 12px;
+}
 
 
-  .options-page button:hover { background-color: rgb(190, 190, 190); }
+.options-page button:hover { background-color: rgb(190, 190, 190); }
 
-  .options-page button:active {
-    background-color: rgb(160, 160, 160);
-  }
+.options-page button:active {
+  background-color: rgb(160, 160, 160);
+}
 
-  .save button {
-    border-width:thick;
-    border-radius:40px;
-    border-color:rgb(78, 10, 10);
-    border-style:double;
-    padding: 12px;
-    font: 50px "Brush Script MT", cursive;
-    color:rgb(85, 61, 61);
-    background-color: #ddd;
-    margin-top:.5rem;
-    margin-left:.5rem;
-    width:14rem;
-    height:5.25rem;
-    line-height: 1rem;
-  }
+.save button {
+  border-width:thick;
+  border-radius:40px;
+  border-color:rgb(78, 10, 10);
+  border-style:double;
+  padding: 1rem;
+  font: 50px "Brush Script", bold;
+  color:rgb(85, 61, 61);
+  background-color: #ddd;
+  margin-top:.5rem;
+  margin-left:.5rem;
+  width:14rem;
+  height:5.25rem;
+  line-height: 3.25rem;
+}
 
-  .save button:hover { background-color: rgb(190, 190, 190); }
+.save button:hover { background-color: rgb(190, 190, 190); }
 
-  .save button:active {
-    background-color: rgb(160, 160, 160);
-  }
+.save button:active {
+  background-color: rgb(160, 160, 160);
+}
 
-  .who-first {
-    border-width:thick;
-    border-radius:40px;
-    border-color:rgb(78, 10, 10);
-    border-style: double;
-    outline:none;
-    padding: 14px;
-    font: 50px "Brush Script MT", cursive;
-    color:rgb(85, 61, 61);
-    background-color: #ddd;
-    display:inline-flex;
-    text-align: center;
+.who-first {
+  border-width:thick;
+  border-radius:40px;
+  border-color:rgb(78, 10, 10);
+  border-style: double;
+  outline:none;
+  padding: 14px;
+  font: 50px "Brush Script";
+  color:rgb(85, 61, 61);
+  background-color: #ddd;
+  display:inline-flex;
+  text-align: center;
 }
 
 .name-label {
-  display:grid;
-  grid-template-columns: .35fr 1fr 1fr .35fr;
-  margin-bottom:1rem;
+display:grid;
+grid-template-columns: .35fr 1fr 1fr .35fr;
+margin-bottom:1rem;
 }
 
 .name-label label {
-  font-weight: bold;
-  font: 35px "Brush Script MT", cursive;
+font-weight: bold;
+font: 35px "Brush Script";
+text-align: center;
+justify-content:space-between;
+margin-left: 10%;
+color:rgb(85, 61, 61);
+}
+
+.name-box {
+  border-width:thick;
+  border-color:rgb(78, 10, 10);
+  border-style: solid;
+  outline:none;
+  padding: 14px;
+  font: 25px "Brush Script";
+  color:rgb(85, 61, 61);
+  background-color: #ddd;
+  display:inline-flex;
+  width: 17.5%;
+  justify-content: space-evenly;
   text-align: center;
+  margin-left: 4.5%;
+  margin-right: 12.5%;
+}
+
+.optionChoiceNames {
+  font: 30px "Brush Script";
+  display: inline-flex;
   justify-content:space-between;
   color:rgb(85, 61, 61);
+  margin-left:5%;
+  margin-top:2 rem;
 }
-  .name-box {
-    border-width:thick;
-    border-color:rgb(78, 10, 10);
-    border-style: solid;
-    outline:none;
-    padding: 14px;
-    font: 25px "Brush Script MT", cursive;
-    color:rgb(85, 61, 61);
-    background-color: #ddd;
-    display:inline-flex;
-    width: 250px;
-    justify-content: space-evenly;
-    text-align: center;
-    margin-left: 8.5rem;
-    margin-right: 18rem;
-  }
 
-  .optionChoiceNames {
-    font: 30px "Brush Script MT", cursive;
-    display: inline-flex;
-    justify-content:space-between;
-    color:rgb(85, 61, 61);
-    margin-left:2.5rem;
-    margin-top:2 rem;
-  }
+.who-first-label {
+  font: 30px "Brush Script";
+  color:rgb(85, 61, 61);
+  margin-left:5%;
+  margin-top:-2rem;
+}
 
-  .who-first-label {
-    font: 30px "Brush Script MT", cursive;
-    color:rgb(85, 61, 61);
-    margin-left:6rem;
-    margin-top:-2rem;
-  }
+.who-first-button {
+  border-width:thick;
+  border-color:rgb(78, 10, 10);
+  border-style: solid;
+  outline:none;
+  padding: 14px;
+  font: 25px "Brush Script";
+  color:rgb(85, 61, 61);
+  background-color: #ddd;
+  display:-ms-inline-grid;
+  width: 15.5rem;
+  text-align: center;
+  margin-top: 2rem;
+  margin-left: 7%;
+  margin-right: 11%;
+}
 
-  .who-first-button {
-    border-width:thick;
-    border-color:rgb(78, 10, 10);
-    border-style: solid;
-    outline:none;
-    padding: 14px;
-    font: 25px "Brush Script MT", cursive;
-    color:rgb(85, 61, 61);
-    background-color: #ddd;
-    display:-ms-inline-grid;
-    width: 15.5rem;
-    text-align: center;
-    margin-top: 2rem;
-    margin-left: 13rem;
-    margin-right: 16rem;
-  }
+.first-label {
+  font: 30px "Brush Script";
+  display: inline-flex;
+  justify-content:space-between;
+  color:rgb(85, 61, 61);
+  margin-left:5%;
+  margin-top:-1rem;
+}
 
-  .first-label {
-    font: 30px "Brush Script MT", cursive;
-    display: inline-flex;
-    justify-content:space-between;
-    color:rgb(85, 61, 61);
-    margin-left:5.7rem;
-    margin-top:-1rem;
-  }
+.winning-text  {
+  margin-top: 100px;
+  font: 75px "Brush Script";
+  text-align: center;
+  color:rgb(79, 97, 155);
+}
 
- .winning-text  {
-    margin-top: 100px;
-    font: 75px "Brush Script MT", cursive;
-    text-align: center;
-    color:rgb(79, 97, 155);
-  }
-
-  .winner {
-    margin-left: 5px;
-    margin-right: 5px;
-    padding-left: 25px;
-    text-underline-offset: 10px;
-    color:rgb(240, 114, 30);
-  }
+.winner {
+  margin-left: 5px;
+  margin-right: 5px;
+  padding-left: 25px;
+  text-underline-offset: 10px;
+  color:rgb(240, 114, 30);
+}
 
 
-  .brackets {
-    color:rgba(16, 66, 38, 0.658);
-  }
+.brackets {
+  color:rgba(16, 66, 38, 0.658);
+}
 
-  .restart button {
-    border-width:thick;
-    border-radius:40px;
-    border-color:rgb(44, 28, 14);
-    border-style:double;
-    padding: 12px;
-    font: 50px "Brush Script MT", cursive;
-    color:rgb(85, 61, 61);
-    background-color: #ddd;
-    margin-top:.5rem;
-    margin-left:.5rem;
-    width:14rem;
-    height:5.25rem;
-    line-height: 1rem;
-  }
-  
-  .restart button:hover { background-color: rgb(190, 190, 190); }
+.restart button {
+  border-width:thick;
+  border-radius:40px;
+  border-color:rgb(44, 28, 14);
+  border-style:double;
+  padding: 12px;
+  font: 50px "Brush Script", bold;
+  color:rgb(85, 61, 61);
+  background-color: #ddd;
+  margin-top:.5rem;
+  margin-left:.5rem;
+  width:14rem;
+  height:5.25rem;
+  line-height: 3.75rem;
+}
 
-  .restart button:active {
-    background-color: rgb(160, 160, 160);
-  }
+.restart button:hover { background-color: rgb(190, 190, 190); }
+
+.restart button:active {
+  background-color: rgb(160, 160, 160);
+}
